# ChangeLog for dev-lang/perl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.283 2009/07/30 05:58:29 tove Exp $

  11 Sep 2009; Daniel Robbins <drobbins@funtoo.org> perl-5.10.1-r11.ebuild:
  two minor fixes - $get_libdir variable expansion fix and use "gcc" for
  compiler so Config.pm references "gcc" rather than "i686-pc-linux-gnu",
  for example.

  08 Sep 2009; Daniel Robbins <drobbins@funtoo.org> perl-5.10.1-r11.ebuild:
  moving to stable to fix Metro stage builds.

*perl-5.10.1-r11 (7 Sep 2009)

  07 Sep 2009; Daniel Robbins <drobbins@funtoo.org> +perl-5.10.1-r11.ebuild:
  New perl ebuild from perl-experimental overlay and Torsten Veller - this new
  ebuild is a big improvement over the old one. I have made minor changes
  to it such as removing the "build" USE flag for now.

  30 Jul 2009; Torsten Veller <tove@gentoo.org> -perl-5.8.8-r7.ebuild:
  Remove 5.8.8-r7 again

*perl-5.10.0-r1 (3 Jun 2009)

  03 Jun 2009; Daniel Robbins <drobbins@funtoo.org> +perl-5.10.0-r1.ebuild:
  This new revision of perl-5.10 contains a small build fix that results in
  <arch>-linux/Config.pm referencing "gcc" rather than "i?86-pc-linux-gnu-gcc"
  which should fix some stage build issues when we switch compilers from, say,
  i486-pc-linux-gnu-gcc to i686-pc-linux-gnu-gcc. Without this fix, some perl
  modules are unable to find the new compiler.

  29 May 2009; Torsten Veller <tove@gentoo.org> perl-5.8.8-r6.ebuild,
  perl-5.8.8-r7.ebuild, +files/perl-5.8.8-fix_file_path_chdir.patch:
  Add another File-Path fix

  27 May 2009; Torsten Veller <tove@gentoo.org> -perl-5.8.8-r2.ebuild,
  -perl-5.8.8-r3.ebuild, -perl-5.8.8-r4.ebuild:
  Cleanup

*perl-5.8.8-r7 (27 May 2009)

  27 May 2009; Torsten Veller <tove@gentoo.org> +perl-5.8.8-r7.ebuild:
  PDEPENDS on CPAN, Encode, ExtUtils-MakeMaker

  08 May 2009; Torsten Veller <tove@gentoo.org>