@@ -43,8 +43,8 @@ DIST perl-5.10.1-5.tar.bz2 4338 RMD160 90ab1caa99a3fd34d99e174d2d4e4216dbebd2a2 
 DIST perl-5.10.1.tar.bz2 11608061 RMD160 840b3a5ac3d7f517770ce789676ebd9154d9ee5a SHA1 98b762b5cd4fb76dd354dfa5ba0d21bc2acacaf2 SHA256 9385f2c8c2ca8b1dc4a7c31903f1f8dc8f2ba867dc2a9e5c93012ed6b564e826
 DIST perl-5.8.8.tar.bz2 10123359 RMD160 e78f26d9b96e6db35f946ad4ff55e3a69385c71b SHA1 4aab490040727ca4419098720eca2ba4367df539 SHA256 818a140d9c04ea8dab3a05104b34ced7f7d9d0a91bfed91baf89a84d0dfb1bc9
 EBUILD perl-5.10.0-r1.ebuild 16286 RMD160 f973e33f240bbb8324c7d4eb221256b0dfe593c1 SHA1 826d8bcab69043180d66f87ac22b6b0c14ebdf77 SHA256 0f943d449dc8bcbbaa18a740336190124c5524871942934cc4fb7bcd90277056
-EBUILD perl-5.10.1-r11.ebuild 16996 RMD160 814ce1d5456cac5ad2bc9db8c2053dbd1cebd54e SHA1 a3e348bdf5d148270177cbe3ef55b7886d43a1b7 SHA256 d2425a6e696be45f18ff81c2f0bf91033e69cf6c15b5bdda8c3147468b21d598
+EBUILD perl-5.10.1-r11.ebuild 11797 RMD160 0de1ec2b5b5f26d5fad6f226c73fad96b56b7673 SHA1 4dd697d0f981e0ff9568ca5108cad262a17576e5 SHA256 199de35d78c0514473c45691eddf65d0645d65ed0da537eb814844b7c5922424
 EBUILD perl-5.8.8-r5.ebuild 19295 RMD160 246aa81b035712c86bebbf1a436b03ddea56648e SHA1 e9f175ef668a6516d27bd08eddae743c8036c9f1 SHA256 9f169c6d160430d08c99effc8ef70cf28f0b03193daba5c60a828e4ded28c900
 EBUILD perl-5.8.8-r6.ebuild 19621 RMD160 f3558dccc3ca76fa33e304b0cf5865bc783f1d0a SHA1 9d11248df2a217a3d0ec35c34d025bd6bbf0a876 SHA256 2c473a151e1f37cd3f1ae21de4aa9c6281e6d21ed6a1ed2e7476d9bf2ee20cb4
-MISC ChangeLog 62001 RMD160 9a7f806f805b2464a75a419199c48d377cf79f34 SHA1 8af92fab68efe56dc69ae8aacba011e7a78e131d SHA256 2e56fd9bb36436170ec7a1312729f42c05e59e3a898bce5fee62d64e98539d5a
+MISC ChangeLog 62332 RMD160 184866f7794df53d590fc39ce49f886f95818a9a SHA1 0b472351e44d5ac42ec70e7a7df0a300152f233d SHA256 1c7feb3d50a88135a62fccf504bd1e857fc8f9220d8808d568eb9c193971f191
 MISC metadata.xml 451 RMD160 8424230d79d13df7462c454050058b3526a78e92 SHA1 1ae85db5c1c1fc6413ca324ebc93b6894831b437 SHA256 49e06011c113616fa1f618cf58d42c2d6abbce5f71936f109b6ae3a5dfff587c
