@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.283 2009/07/30 05:58:29 tove Exp $
 
+  23 Sep 2009; Daniel Robbins <drobbins@funtoo.org> perl-5.10.1-r11.ebuild:
+  forward-ported some man-related things from our perl-5.10.0-r1.ebuild to try
+  to address a bug where sometimes, all man pages get installed to / with a .0
+  suffix. Since this didn't happen with perl-5.10.0, I'm hoping the older logic
+  addresses it.
+
   11 Sep 2009; Daniel Robbins <drobbins@funtoo.org> perl-5.10.1-r11.ebuild:
   two minor fixes - $get_libdir variable expansion fix and use "gcc" for
   compiler so Config.pm references "gcc" rather than "i686-pc-linux-gnu",
